Fixed list-filter-selector-options z-index

--- a/src/scss/components/list_page/filter_selector.scss
+++ b/src/scss/components/list_page/filter_selector.scss
@@ -55,7 +55,7 @@
   position: absolute;
   right: -20px;
   top: -8px;
-  z-index: 1;
+  z-index: 2;
   background-color: #fff;
   min-width: 300px;
   max-width: 500px;
